test-app2/kube-objects/simpleapp-istio-clusterip-services.yaml
# Use this for non-Istio testing to make services directly accessible
apiVersion: v1
kind: Service
metadata:
  name: simple-app1-service
spec:
  selector:
    app: simple-app1
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: simple-app2-service
spec:
  selector:
    app: simple-app2
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: simple-app3-service
spec:
  selector:
    app: simple-app3
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 5000
