test-app2/kube-objects/simpleapp-istio-virtualservices.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple-app1-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - test-gateway
  http:
  - match:
    - uri:
        exact: /app1
    route:
    - destination:
        host: simple-app1-service
        port:
          number: 3000
  - match:
    - uri:
        exact: /app2
    route:
    - destination:
        host: simple-app2-service
        port:
          number: 4000
  - match:
    - uri:
        exact: /app3
    route:
    - destination:
        host: simple-app3-service
        port:
          number: 5000
